test/resources/typer/failing/ArithError2.scala
object ArithError2 {
  1 % true
}
